force-app/main/default/objects/Mail__c/fields/Delivery_State__c.field-meta.xml
<CustomField>
    <fullName>Delivery_State__c</fullName>
    <formula>TEXT( Inhabitant__r.Address__r.State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery State</label>
    <type>Text</type>
</CustomField>