force-app/main/default/objects/Mail__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <description>Generated code to allow a package to be tracked.</description>
    <label>Tracking Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>