force-app/main/default/objects/Mail__c/validationRules/Insurance_Checker_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_Checker_2</fullName>
    <active>true</active>
    <description>Makes sure that you have insurance amount recorded if Insurance checkbox is checked.</description>
    <errorConditionFormula>Insurance_check__c = TRUE &amp;&amp; ISNULL(Insurance__c)</errorConditionFormula>
    <errorDisplayField>Insurance__c</errorDisplayField>
    <errorMessage>Please enter an insurance amount.</errorMessage>
</ValidationRule>